fix(client): broken layouts in editability and note type dropdowns

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -396,7 +396,7 @@ body.desktop .dropdown-menu {
     color: var(--dropdown-item-icon-destructive-color);
 }
 
-.dropdown-item > span:not(.bx) {
+.dropdown-item > span:not([class]) {
     width: 100%;
 }
 
